rewritten code and repainted images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,10 @@
         <item>standart_symbol3</item>
         <item>standart_symbol4</item>
         <item>standart_symbol5</item>
+        <item>standart_symbol6</item>
+        <item>standart_symbol7</item>
+        <item>standart_symbol8</item>
+        <item>standart_symbol9</item>
+        <item>standart_symbol10</item>
     </string-array>
 </resources>
