Main meu, About, Endless Mode and Choose Campaign finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,9 @@
     <string name="EndlessModeText">Endless mode</string>
     <string name="TableOfRecordsText">Table of records</string>
     <string name="AboutText">About</string>
+
+    <string name="RecordText">Record:</string>
+    <string name="ResultText">Score:</string>
+
+    <string name="EgyptText">Egypt</string>
 </resources>
